--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
         </div>
       
         <div class="container" style="background-color:#f1f1f1">
-          <button type="button" class="cancelbtn">Cancel</button>
+          <button type="button" class="cancelbtn"> <h2>Cancel</h2></button>
           <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
       </form>
